@@ -14,6 +14,7 @@ PQXX_HAVE_BOOST_SMART_PTR	public	compiler
 PQXX_HAVE_CPP_PRAGMA_MESSAGE	public	compiler
 PQXX_HAVE_CPP_WARNING	public	compiler
 PQXX_HAVE_DEPRECATED	public	compiler
+PQXX_HAVE_DELETED_OP	public	compiler
 PQXX_HAVE_DISTANCE	internal	compiler
 PQXX_HAVE_FINAL	public	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
